# kedro-inspect

./: pyproject.toml
src/kedro_inspect/: cli.py  node.py  node_func.py  pipeline.py  serialisation.py
tests/: test_node.py  test_node_func.py  test_pipeline.py
