[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_inspect"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["kedro", "typing-extensions"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "kedro_inspect.__version__" }
